BP-3567-Dutch translation for whole plug-in (And overall review)

--- a/i18n/de_DE.csv
+++ b/i18n/de_DE.csv
@@ -114,10 +114,10 @@
 "The Secret Key can be retrieved in Buckaroo Plaza under Configuration > Security > Secret Key. For support contact Buckaroo.","Der 'Secret Key' wird im Buckaroo Plaza angezeigt unter 'Configuration > Security > Secret Key. Wenden Sie sich für Support an Buckaroo."
 "(Website) key","(Website) key"
 "Enter your Buckaroo merchant/website key.","Fügen Sie Ihren Buckaroo merchant/website key hinzu."
-"The (Website) key can be retrieved in Buckaroo Plaza under My Buckaroo > Websites. For support contact Buckaroo.","Der '(Merchant)Key' wird angezeigt in the Buckaroo Buckaroo Plaza unter My Buckaroo > Websites."
+"The (Website) key can be retrieved in Buckaroo Plaza under My Buckaroo > Websites. For support contact Buckaroo.","Der '(Merchant)Key' wird angezeigt in the Buckaroo Plaza unter My Buckaroo > Websites."
 "(Merchant) guid","(Merchant) guid"
 "Enter your Buckaroo merchant guid.","Fügen Sie Ihren Buckaroo-Guid code hinzu."
-"The (Merchant) Guid can be retrieved in Buckaroo Plaza under My Buckaroo > Details > Guid. For support contact Buckaroo.",""Die Händler-Guid wird im Buckaroo Buckaroo Plaza angezeigt unter > My Buckaroo > Details > Guid."
+"The (Merchant) Guid can be retrieved in Buckaroo Plaza under My Buckaroo > Details > Guid. For support contact Buckaroo.",""Die Händler-Guid wird im Buckaroo Plaza angezeigt unter > My Buckaroo > Details > Guid."
 "Transaction label","Transaktionsetikett"
 "The transaction description in Buckaroo Plaza.","Die Beschreibung der Transaktion in Buckaroo Plaza."
 "These options are only intended for expert users. Tampering with the default settings may negatively affect the workflow and performance of all Buckaroo payment methods. Use at your own risk.","Diese Einstellungen sind nur für erfahrene Benutzer gedacht. Das Anpassen dieser Einstellungen kann die Funktion des Moduls und des Webshops beeinträchtigen. Benutzung auf eigene Gefahr."
@@ -158,12 +158,12 @@
 "Magento Enterprise Edition version","Magento Enterprise Edition-Version"
 "Quick reference guide","Kurzanleitung"
 "Log in to the ","Melden Sie sich an "
-"Buckaroo Buckaroo Plaza","Buckaroo Buckaroo Plaza"
+"Buckaroo Plaza","Buckaroo Plaza"
 " to collect the following security settings:"," um die folgenden Sicherheitseinstellungen zu sammeln:"
 "Support","Die Unterstützung"
 "This extension is developed by Buckaroo.","Diese Erweiterung wird von Buckaroo entwickelt."
 "Extension basic configuration and account information","Basiskonfiguration der Erweiterung und Kontoinformationen"
-"Buckaroo Buckaroo Plaza:","Buckaroo Buckaroo Plaza:"
+"Buckaroo Plaza:","Buckaroo Plaza:"
 "Phone:","Telefon:"
 "E-mail:","Email:"
 "Extension support and advanced configuration","Erweiterungsunterstützung und erweiterte Konfiguration"
@@ -358,8 +358,8 @@
 "White","Witz"
 "White outline","Weißer Umriss"
 "Select where this payment method will be available.","Wählen Sie aus, wo diese Zahlungsmethode verfügbar sein soll."
-"Cannot Refund via Magento Backend. Partial refunds combined with a payment fee can only be refunded via the Buckaroo Buckaroo Plaza, see also the <a href="https://support.buckaroo.nl" target="_blank">KB article</a>.<br><a href="https://plaza.buckaroo.nl" target="_blank">Open a new window to the Buckaroo Buckaroo Plaza</a>.","Rückerstattung über Magento Backend nicht möglich. Teilerstattungen in Verbindung mit einer Zahlungsgebühr können nur über die Buckaroo Buckaroo Plaza erstattet werden, siehe auch die <a href="https://support.buckaroo.nl" target="_blank">KB-Artikel</a>.<br><a href="https://plaza.buckaroo.nl" target="_blank">Öffnen Sie ein neues Fenster zum Buckaroo Buckaroo Plaza</a>."
-"Cannot refund this order via Magento Backend for now, we are working on a solution! Credit Management orders can only be refunded via the Buckaroo Buckaroo Plaza.<br><a href="https://plaza.buckaroo.nl" target="_blank">Open a new window to the Buckaroo Buckaroo Plaza</a>.","Kann diese Bestellung vorerst nicht über Magento Backend zurückerstatten, wir arbeiten an einer Lösung! Credit Management-Bestellungen können nur über Buckaroo Buckaroo Plaza erstattet werden.<br><a href="https://plaza.buckaroo.nl" target="_blank">Öffnen Sie ein neues Fenster zum Buckaroo Buckaroo Plaza</a>."
+"Cannot Refund via Magento Backend. Partial refunds combined with a payment fee can only be refunded via the Buckaroo Plaza, see also the <a href="https://support.buckaroo.nl" target="_blank">KB article</a>.<br><a href="https://plaza.buckaroo.nl" target="_blank">Open a new window to the Buckaroo Plaza</a>.","Rückerstattung über Magento Backend nicht möglich. Teilerstattungen in Verbindung mit einer Zahlungsgebühr können nur über die Buckaroo Plaza erstattet werden, siehe auch die <a href="https://support.buckaroo.nl" target="_blank">KB-Artikel</a>.<br><a href="https://plaza.buckaroo.nl" target="_blank">Öffnen Sie ein neues Fenster zum Buckaroo Plaza</a>."
+"Cannot refund this order via Magento Backend for now, we are working on a solution! Credit Management orders can only be refunded via the Buckaroo Plaza.<br><a href="https://plaza.buckaroo.nl" target="_blank">Open a new window to the Buckaroo Plaza</a>.","Kann diese Bestellung vorerst nicht über Magento Backend zurückerstatten, wir arbeiten an einer Lösung! Credit Management-Bestellungen können nur über Buckaroo Plaza erstattet werden.<br><a href="https://plaza.buckaroo.nl" target="_blank">Öffnen Sie ein neues Fenster zum Buckaroo Plaza</a>."
 "Webshops","Webshops"
 "Extensions","Erweiterungen"
 "Commerce","Handel"
