--- a/i18n/es_ES.csv
+++ b/i18n/es_ES.csv
@@ -160,12 +160,12 @@
 "Magento Enterprise Edition version","Versión Edición de empresa de Magento"
 "Quick reference guide","Guía de referencia rápida"
 "Log in to the ","Iniciar sesión en"
-"Buckaroo Buckaroo Plaza","Buckaroo Plaza de Buckaroo"
+"Buckaroo Plaza","Buckaroo Plaza"
 " to collect the following security settings:","para recopilar los siguientes ajustes de seguridad:"
 "Support","Asistencia"
 "This extension is developed by Buckaroo.","Esta extensión la ha desarrollado Buckaroo."
 "Extension basic configuration and account information","Configuración básica de la extensión e información de la cuenta"
-"Buckaroo Buckaroo Plaza:","Buckaroo Plaza de Buckaroo:"
+"Buckaroo Plaza:","Buckaroo Plaza:"
 "Phone:","Teléfono:"
 "E-mail:","Correo electrónico:"
 "Extension support and advanced configuration","Soporte de extensión y configuración avanzada"
@@ -363,7 +363,7 @@
 "White","Blanco"
 "White outline","Contorno blanco"
 "Select where this payment method will be available.","Seleccione dónde estará disponible este método de pago."
-"Cannot Refund via Magento Backend. Partial refunds combined with a payment fee can only be refunded via the Buckaroo Buckaroo Plaza","No se puede efectuar el reembolso a través del back-end de Magento. Los reembolsos parciales combinados con una tarifa de pago solo se pueden reembolsar a través de Buckaroo Plaza de Buckaroo. Consulte <a href="https://support.buckaroo.nl" target="_blank">Artículo de Buckaroo Docs</a>.<br><a href="https://plaza.buckaroo.nl" target="_blank">Abrir Buckaroo Plaza de Buckaroo en una ventana nueva</a>."
+"Cannot Refund via Magento Backend. Partial refunds combined with a payment fee can only be refunded via the Buckaroo Plaza","No se puede efectuar el reembolso a través del back-end de Magento. Los reembolsos parciales combinados con una tarifa de pago solo se pueden reembolsar a través de Buckaroo Plaza de Buckaroo. Consulte <a href="https://support.buckaroo.nl" target="_blank">Artículo de Buckaroo Docs</a>.<br><a href="https://plaza.buckaroo.nl" target="_blank">Abrir Buckaroo Plaza de Buckaroo en una ventana nueva</a>."
 "Cannot refund this order via Magento Backend for now","En este momento no se puede efectuar el reembolso de este pedido a través del back-end de Magento. ¡ Estamos buscando una solución! Los reembolsos de los pedidos de Credit Management solo se pueden efectuar a través de Buckaroo Plaza de Buckaroo.<br><a href="https://plaza.buckaroo.nl" target="_blank">Abrir Buckaroo Plaza de Buckaroo en una ventana nueva</a>."
 "Webshops","Tiendas en línea"
 "Extensions","Extensiones"
