--- a/i18n/fr_FR.csv
+++ b/i18n/fr_FR.csv
@@ -158,12 +158,12 @@
 "Magento Enterprise Edition version","Version Magento Enterprise Edition"
 "Quick reference guide","Guide de référence rapide"
 "Log in to the ","Connectez-vous au "
-"Buckaroo Buckaroo Plaza","Place de paiement Buckaroo"
+"Buckaroo Plaza","Buckaroo Plaza"
 " to collect the following security settings:"," pour collecter les paramètres de sécurité suivants:"
 "Support","Soutien"
 "This extension is developed by Buckaroo.","Cette extension est développée par Buckaroo."
 "Extension basic configuration and account information","Configuration de base de l'extension et informations sur le compte"
-"Buckaroo Buckaroo Plaza:","Place de paiement Buckaroo:"
+"Buckaroo Plaza:","Buckaroo Plaza:"
 "Phone:","Téléphoner:"
 "E-mail:","E-mail:"
 "Extension support and advanced configuration","Prise en charge des extensions et configuration avancée"
@@ -358,8 +358,8 @@
 "White","Blanc"
 "White outline","Contour blanc"
 "Select where this payment method will be available.","Sélectionnez où ce mode de paiement sera disponible."
-"Cannot Refund via Magento Backend. Partial refunds combined with a payment fee can only be refunded via the Buckaroo Buckaroo Plaza, see also the <a href="https://support.buckaroo.nl" target="_blank">KB article</a>.<br><a href="https://plaza.buckaroo.nl" target="_blank">Open a new window to the Buckaroo Buckaroo Plaza</a>.","Impossible de rembourser via Magento Backend. Les remboursements partiels combinés à des frais de paiement ne peuvent être remboursés que via la Buckaroo Buckaroo Plaza, voir aussi le <a href="https://support.buckaroo.nl" target="_blank">Article de la base de connaissances</a>.<br><a href="https://plaza.buckaroo.nl" target="_blank">Ouvrir une nouvelle fenêtre sur la Buckaroo Buckaroo Plaza</a>."
-"Cannot refund this order via Magento Backend for now, we are working on a solution! Credit Management orders can only be refunded via the Buckaroo Buckaroo Plaza.<br><a href="https://plaza.buckaroo.nl" target="_blank">Open a new window to the Buckaroo Buckaroo Plaza</a>.",,"Impossible de rembourser cette commande via Magento Backend pour le moment, nous travaillons sur une solution ! Les commandes de gestion du crédit ne peuvent être remboursées que via la Buckaroo Buckaroo Plaza.<br><a href="https://plaza.buckaroo.nl" target="_blank">Ouvrir une nouvelle fenêtre sur la Buckaroo Buckaroo Plaza</a>."
+"Cannot Refund via Magento Backend. Partial refunds combined with a payment fee can only be refunded via the Buckaroo Plaza, see also the <a href="https://support.buckaroo.nl" target="_blank">KB article</a>.<br><a href="https://plaza.buckaroo.nl" target="_blank">Open a new window to the Buckaroo Plaza</a>.","Impossible de rembourser via Magento Backend. Les remboursements partiels combinés à des frais de paiement ne peuvent être remboursés que via la Buckaroo Plaza, voir aussi le <a href="https://support.buckaroo.nl" target="_blank">Article de la base de connaissances</a>.<br><a href="https://plaza.buckaroo.nl" target="_blank">Ouvrir une nouvelle fenêtre sur la Buckaroo Plaza</a>."
+"Cannot refund this order via Magento Backend for now, we are working on a solution! Credit Management orders can only be refunded via the Buckaroo Plaza.<br><a href="https://plaza.buckaroo.nl" target="_blank">Open a new window to the Buckaroo Plaza</a>.",,"Impossible de rembourser cette commande via Magento Backend pour le moment, nous travaillons sur une solution ! Les commandes de gestion du crédit ne peuvent être remboursées que via la Buckaroo Plaza.<br><a href="https://plaza.buckaroo.nl" target="_blank">Ouvrir une nouvelle fenêtre sur la Buckaroo Plaza</a>."
 "Webshops","Boutiques en ligne"
 "Extensions","Rallonges"
 "Commerce","Commerce"
