--- a/i18n/nl_BE.csv
+++ b/i18n/nl_BE.csv
@@ -158,12 +158,12 @@
 "Magento Enterprise Edition version","Magento Enterprise Edition versie"
 "Quick reference guide","Eerste stappen"
 "Log in to the ","Log in bij "
-"Buckaroo Buckaroo Plaza","Buckaroo Buckaroo Plaza"
+"Buckaroo Plaza","Buckaroo Plaza"
 " to collect the following security settings:"," om de volgende beveiligingsgegevens te verzamelen:"
 "Support","Support"
 "This extension is developed by Buckaroo.","Deze extensie is ontwikkeld door Buckaroo."
 "Extension basic configuration and account information","Algemene instellingen en accountgegevens"
-"Buckaroo Buckaroo Plaza:","Buckaroo Buckaroo Plaza:"
+"Buckaroo Plaza:","Buckaroo Plaza:"
 "Phone:","Telefoon:"
 "E-mail:","E-mail:"
 "Extension support and advanced configuration","Extensie support en geavanceerde configuratie"
@@ -362,8 +362,8 @@
 "White","Wit"
 "White outline","Witte omtrek"
 "Select where this payment method will be available.","Selecteer waar deze betaalmethode beschikbaar zal zijn."
-"Cannot Refund via Magento Backend. Partial refunds combined with a payment fee can only be refunded via the Buckaroo Buckaroo Plaza, see also the <a href="https://support.buckaroo.nl" target="_blank">KB article</a>.<br><a href="https://plaza.buckaroo.nl" target="_blank">Open a new window to the Buckaroo Buckaroo Plaza</a>.","Deze refund is niet mogelijk. Gedeeltelijke refunds gecombineerd met de payment fee kunnen alleen worden teruggestort via de Buckaroo Buckaroo Plaza, zie ook het <a href="https://support.buckaroo.nl" target="_blank">KB artikel</a>.<br><a href="https://plaza.buckaroo.nl" target="_blank">Open een nieuw venster om naar de Buckaroo Buckaroo Plaza</a>."
-"Cannot refund this order via Magento Backend for now, we are working on a solution! Credit Management orders can only be refunded via the Buckaroo Buckaroo Plaza.<br><a href="https://plaza.buckaroo.nl" target="_blank">Open a new window to the Buckaroo Buckaroo Plaza</a>.",,"Deze refund is momenteel niet mogelijk, wij werken aan een oplossing! Credit Management refunds kunnen alleen worden teruggestort via de Buckaroo Buckaroo Plaza.<br><a href="https://plaza.buckaroo.nl" target="_blank">Open een nieuw venster om naar de Buckaroo Buckaroo Plaza</a>."
+"Cannot Refund via Magento Backend. Partial refunds combined with a payment fee can only be refunded via the Buckaroo Plaza, see also the <a href="https://support.buckaroo.nl" target="_blank">KB article</a>.<br><a href="https://plaza.buckaroo.nl" target="_blank">Open a new window to the Buckaroo Plaza</a>.","Deze refund is niet mogelijk. Gedeeltelijke refunds gecombineerd met de payment fee kunnen alleen worden teruggestort via de Buckaroo Plaza, zie ook het <a href="https://support.buckaroo.nl" target="_blank">KB artikel</a>.<br><a href="https://plaza.buckaroo.nl" target="_blank">Open een nieuw venster om naar de Buckaroo Plaza</a>."
+"Cannot refund this order via Magento Backend for now, we are working on a solution! Credit Management orders can only be refunded via the Buckaroo Plaza.<br><a href="https://plaza.buckaroo.nl" target="_blank">Open a new window to the Buckaroo Plaza</a>.",,"Deze refund is momenteel niet mogelijk, wij werken aan een oplossing! Credit Management refunds kunnen alleen worden teruggestort via de Buckaroo Plaza.<br><a href="https://plaza.buckaroo.nl" target="_blank">Open een nieuw venster om naar de Buckaroo Plaza</a>."
 "Webshops","Webshops"
 "Extensions","Extensies"
 "Commerce","Commerce"
