BP-3547-Discount is not translated correctly for Riverty transactions (Magento 2)

--- a/i18n/be_FR.csv
+++ b/i18n/be_FR.csv
@@ -2,3 +2,8 @@
 "Create Invoice on Payment","Créer une facture lors du paiement"
 "Create Invoice on Shipment","Créer une facture lors de l'expédition"
 "Select the moment when the invoice should be created.","Sélectionnez le moment où la facture devrait être créée."
+"Delivery costs","Coûts de livraison"
+"Discount","Réduction"
+"Discount on","Réduction sur"
+"Shipping fee","Les frais d'expédition"
+"Service costs","Frais de service"
