--- a/i18n/es_ES.csv
+++ b/i18n/es_ES.csv
@@ -428,6 +428,9 @@
 "Error: postcode is required","Error: el código postal es obligatorio"
 "Delivery costs","Costes de entrega"
 "Discount","Descuento"
+"Service costs","Costos de servicios"
+"Discount on","Descuento en"
+"Shipping fee","Tarifa de envío"
 "Your paid successfully. Please finish your order","El pago se ha realizado correctamente. Finalice el pedido"
 "Apply Gift Card","Aplicar tarjeta regalo"
 "Pay remaining amount: %1 %2","Pagar el importe restante: %1 %2"
