--- a/i18n/nl_NL.csv
+++ b/i18n/nl_NL.csv
@@ -428,7 +428,6 @@
 "Card","Kaart"
 "Error: postcode is required","Error: postcode is required",
 "Delivery costs","Bezorgkosten"
-"Discount","Korting"
 "Your paid successfully. Please finish your order","Uw betaling is succesvol verlopen. Rond uw bestelling af"
 "Apply Gift Card","Pas cadeaubonnen toe"
 "Pay remaining amount: %1 %2","Betaal resterende bedrag: %1 %2"
@@ -469,3 +468,7 @@
 "Giftcard acquirer","Giftcard acquirer"
 "Select your giftcard supplier","Selecteer cadeaukaartleverancier"
 "You have canceled the payment request.","U heeft het betaalverzoek geannuleerd."
+"Service costs","Servicekosten"
+"Shipping fee","Verzendkosten"
+"Discount","Korting"
+"Discount on","Korting op"
