--- a/i18n/de_DE.csv
+++ b/i18n/de_DE.csv
@@ -421,6 +421,8 @@
 "Error: postcode is required","Fehler: Postleitzahl ist erforderlich",
 "Delivery costs","Versandkosten"
 "Discount","Rabatt"
+"Shipping fee","Versandkosten"
+"Service costs","Servicekosten"
 "Your paid successfully. Please finish your order","Sie haben erfolgreich bezahlt. Bitte schließen Sie Ihre Bestellung ab."
 "Apply Gift Card","Geschenkkarte beantragen"
 "Pay remaining amount: %1 %2","Restbetrag zahlen: %1 %2"
