--- a/i18n/fr_FR.csv
+++ b/i18n/fr_FR.csv
@@ -420,7 +420,10 @@
 "Card","Carte"
 "Error: postcode is required","Erreur: le code postal est requis",
 "Delivery costs","Coûts de livraison"
-"Discount","Remise"
+"Discount","Réduction"
+"Discount on","Réduction sur"
+"Shipping fee","Les frais d'expédition"
+"Service costs","Frais de service"
 "Your paid successfully. Please finish your order","Vous avez payé avec succès. Veuillez terminer votre commande"
 "Apply Gift Card","Appliquer des chèques cadeaux"
 "Pay remaining amount: %1 %2","Payer le montant restant: %1 %2"
