--- a/i18n/nl_BE.csv
+++ b/i18n/nl_BE.csv
@@ -424,7 +424,10 @@
 "Card","Kaart"
 "Error: postcode is required","Error: postcode is required",
 "Delivery costs","Bezorgkosten"
+"Service costs","Servicekosten"
+"Shipping fee","Verzendkosten"
 "Discount","Korting"
+"Discount on","Korting op"
 "Your paid successfully. Please finish your order","Uw betaling is succesvol verlopen. Rond uw bestelling af"
 "Apply Gift Card","Pas cadeaubonnen toe"
 "Pay remaining amount: %1 %2","Betaal resterende bedrag: %1 %2"
