BP-3567-Dutch translation for whole plug-in (And overall review)

--- a/i18n/nl_NL.csv
+++ b/i18n/nl_NL.csv
@@ -3,12 +3,12 @@
 "iDEAL","iDEAL"
 "Enable iDEAL","iDEAL inschakelen"
 "Enable or disable this payment method.","Schakel de betaalmethode in of uit."
-"Frontend label","Label aan de voorkant"
-"Determines the frontend label shown.","De waarde zoals deze aan de voorkant wordt getoond."
-"Frontend sort order","Sorteervolgorde betaalmethode"
+"Frontend label","Naam van de betaalmethode"
+"Determines the frontend label shown.","De naam van de betaalmethode zoals deze in de checkout wordt getoond. Indien dit veld leeg is, dan wordt de Buckaroo default gebruikt."
+"Frontend sort order","Volgorde betaalmethoden"
 "Consumer Financial Warning","Financiële Waarschuwing"
 "Due to the regulations for BNPL methods in The Netherlands you’ll  have to warn customers about using a BNPL plan because it can be easy to get into debt. When enabled a warning will be showed in the checkout. Please note that this setting only applies for customers in The Netherlands.","Vanwege de voorschriften voor achteraf betaalmethoden in Nederland dient u klanten te waarschuwen voor het gebruik van een achteraf betaalmethode omdat het gemakkelijk kan leiden tot schulden. Wanneer deze functie is ingeschakeld, wordt er een waarschuwing weergegeven tijdens het afrekenen. Let op dat deze instelling alleen van toepassing is op klanten in Nederland."
-"Determines the sorting of payment methods.","Bepaalt de volgorde van de betaalmethodes aan de voorkant."
+"Determines the sorting of payment methods.","Pas de volgorde van de betaalmethoden aan zoals deze in de checkout worden weergegeven."
 "Advanced Configuration","Geavanceerde opties"
 "Send order confirmation email","Verstuur order bevestigingsmail"
 "Enable to send an order confirmation email to the customer when the creating of the order is successful. Specific for this payment method.","Activeer om een order bevestigings email te versturen wanneer de order is aangemaakt. Specifiek voor deze betaalmethode."
@@ -102,10 +102,10 @@
 "Giropay","Giropay"
 "Enable Giropay","Giropay inschakelen"
 "Refunding","Terugbetaling"
-"Enable or disable refunding.","Schakel de creditering/terugstorten in of uit."
+"Enable or disable refunding.","Activeer of deactiveer de mogelijkheid tot terugbetalingen via Buckaroo. Wanneer ingeschakeld, kun je online terugbetalingen verwerken via Buckaroo door het aanmaken van een creditnota in Magento."
 "Set to 'No' refunds must be done manualy in Buckaroo Plaza.","Bij de selectie 'Nee' worden credit memo's in Magento niet aangeboden bij Buckaroo Plaza."
-"Push Buckaroo Plaza refunds to Magento","Accepteer Buckaroo Plaza refunds in Magento"
-"Allow 2-way refunding from Magento and Buckaroo Plaza.","Verwerk 'refunding' vanuit zowel Magento als Buckaroo Plaza."
+"Push Buckaroo Plaza refunds to Magento","Accepteer Buckaroo Plaza terugbetalingen in Magento"
+"Allow 2-way refunding from Magento and Buckaroo Plaza.","Verwerk terugbetalingen die aangemaakt zijn in de Buckaroo Plaza. In Magento wordt er vervolgens ook een creditnota aangemaakt."
 "Enabled","Ingeschakeld"
 "Yes","Ja"
 "No","Nee"
@@ -119,7 +119,7 @@
 "(Merchant) guid","(Merchant) guid"
 "Enter your Buckaroo merchant guid.","Voeg uw Buckaroo merchant guid toe."
 "The (Merchant) Guid can be retrieved in Buckaroo Plaza under My Buckaroo > Details > Guid. For support contact Buckaroo.",""De '(Merchant) Guid' staat weergegeven in Buckaroo Plaza onder Mijn Buckaroo > Details > Guid."
-"Transaction label","Transactie label"
+"Transaction label","Transactiebeschrijving"
 "The transaction description in Buckaroo Plaza.","De omschrijving van de transactie in Buckaroo Plaza."
 "These options are only intended for expert users. Tampering with the default settings may negatively affect the workflow and performance of all Buckaroo payment methods. Use at your own risk.","Deze instellingen zijn enkel bedoeld voor expert gebruikers. Het aanpassen van deze instellingen kan de werking van de module en de webshop negatief beïnvloeden. Gebruik op eigen risico."
 "New status","Nieuw status"
@@ -456,10 +456,10 @@
 "E-mail","E-mail:"
 "Expiration:","Vervaldatum:"
 "Bancontact","Bancontact"
-"Invoice Handling","Factuurafhandeling"
+"Invoice Handling","Facturatiemoment"
 "Create Invoice on Payment","Factuur aanmaken bij een succesvolle betaling"
 "Create Invoice on Shipment","Factuur aanmaken bij de verzending"
-"Select the moment when the invoice should be created.","Selecteer het moment waarop de factuur moet worden aangemaakt."
+"Select the moment when the invoice should be created.","Selecteer wanneer de factuur automatisch wordt aangemaakt: bij ontvangst van betaling of bij het aanmaken van een verzending."
 "Consumer Iban","Klant IBAN"
 "Consumer Name","Klantnaam rekeninghouder"
 "Customer Account Name","Klantnaam rekeninghouder"
@@ -483,7 +483,7 @@
 "Invoice Handling","Factuurafhandeling"
 "Create Invoice on Payment","Factuur aanmaken bij een succesvolle betaling"
 "Create Invoice on Shipment","Factuur aanmaken bij het verzending"
-"Select the moment when the invoice should be created.","Selecteer het moment waarop de factuur moet worden aangemaakt."
+"Select the moment when the invoice should be created.","Selecteer wanneer de factuur automatisch wordt aangemaakt: bij ontvangst van betaling of bij het aanmaken van een verzending."
 "Sort iDEAL banks","Volgorde van de iDEAL issuers"
 "Sort PayByBank Banks","Volgorde van de PayByBank issuers"
 "Sort Credit-debitcard issuers","Volgorde van de Credit-debitcard issuers"
@@ -520,12 +520,12 @@
 "Settings","Instellingen"
 "Payment methods","Betaalmethoden"
 "Verification methods","Verificatiemethoden"
-"The transaction description, shown in the Buckaroo Plaza and visible on bank account of consumers.","De transactieomschrijving, getoond in de Buckaroo Plaza en zichtbaar op de bankrekening van consumenten."
+"The transaction description, shown in the Buckaroo Plaza and visible on bank account of consumers.","Pas de beschrijving van de transactie aan. Deze beschrijving wordt getoond in de Buckaroo Plaza en op de bankafschriften van consumenten."
 "Available substitutions: <code>{order_number}</code>, <code>{shop_name}</code>, <code>{product_name}</code>(first product name)","Beschikbare vervangingen: <code>{order_number}</code>, <code>{shop_name}</code>, <code>{product_name}</code>(first product name)"
-"Create Refund on Approve for Pending Approval Refunds","Maak terugbetaling aan bij goedkeuring voor terugbetalingen in afwachting van goedkeuring"
-"Yes - Create CreditMemo after approve from Plaza <br> No - Create CreditMemo on Request with status ""Pending""","Ja - Maak CreditMemo aan na goedkeuring vanuit Plaza <br> Nee - Maak CreditMemo aan op verzoek met de status ""In behandeling"""
-"Refund label","Terugbetalingslabel"
-"The refund description, shown in Buckaroo plaza and visible on bank account of consumers.","De terugbetalingsomschrijving, getoond in de Buckaroo Plaza en zichtbaar op de bankrekening van consumenten."
+"Create Refund on Approve for Pending Approval Refunds","Nieuwe terugbetaling aanmaken bij goedkeuring vanuit de Buckaroo Plaza"
+"Yes - Create CreditMemo after approve from Plaza <br> No - Create CreditMemo on Request with status ""Pending""","Ja - Maak creditnota aan na goedkeuring vanuit de Buckaroo Plaza <br> Nee - Maak creditnota aan op verzoek met de status ""In behandeling"""
+"Refund label","Transactiebeschrijving van terugbetaling"
+"The refund description, shown in Buckaroo plaza and visible on bank account of consumers.","Pas de beschrijving van de terugbetaling aan. Deze beschrijving wordt getoond in de Buckaroo Plaza en op de bankafschriften van consumenten."
 "Adjust default order statuses","Aanpassen van standaard bestelstatussen"
 "Redirect after payment attempt","Doorverwijzen na betalingspoging"
 "Redirect to checkout payment section after 'Failure'","Doorsturen naar de betaalsectie van de afrekenpagina na een 'Failure'"
@@ -551,12 +551,12 @@
 "Advanced order export for giftcards","Geavanceerde bestelexport voor cadeaukaarten"
 "Advanced order export, added used gitcards",Geavanceerde bestelexport, toegevoegde gebruikte cadeaukaarten"
 "When adding custom fields to your transaction request you have to also add them to your Buckaroo <a href = ""https://plaza.buckaroo.nl/Configuration/Merchant/CustomFields"" target=""_blank""> Plaza </a> account. Click on <a href=""https://support.buckaroo.nl/categorie%C3%ABn/plugins/magento-2/faq-magento-2/add-custom-fields-to-transaction-requests"" target=""_blank""> read more </a> for additional information about adding this fields to the Plaza.","Wanneer u aangepaste velden toevoegt aan uw transactieverzoek, moet u ze ook toevoegen aan uw Buckaroo <a href=""https://plaza.buckaroo.nl/Configuration/Merchant/CustomFields"" target=""_blank"">Plaza</a> account. Klik op <a href=""https://support.buckaroo.nl/categorie%C3%ABn/plugins/magento-2/faq-magento-2/add-custom-fields-to-transaction-requests"" target=""_blank"">lees meer</a> voor aanvullende informatie over het toevoegen van deze velden aan de Plaza."
-"This controls the description which the user sees during checkout.","Dit regelt de beschrijving die de gebruiker ziet tijdens het afrekenen."
-"Frontend subtext","Frontend beschrijving"
-"Frontend subtext style","Frontend beschrijving style"
-"Choose a font style for the subtext.","Kies een lettertype voor de ondertitel."
-"Frontend subtext color","Kleur frontend beschrijving"
-"Choose a font color for the subtext.","Kies een letterkleur voor de frontend beschrijving."
+"This controls the description which the user sees during checkout.","U kunt ook een extra betaalmethodebeschrijving instellen die onder de naam van de betaalmethode wordt getoond, bijvoorbeeld 'Betaal achteraf'"
+"Frontend subtext","Betaalmethode beschrijving"
+"Frontend subtext style","Betaalmethode beschrijving lettertype stijl"
+"Choose a font style for the subtext.","Kies een lettertypestijl om je beschrijving te laten opvallen, of gebruik de standaardwaarde 'Regular'."
+"Frontend subtext color","Lettertypekleur van de betaalmethodebeschrijving"
+"Choose a font color for the subtext.","Pas de kleur van de beschrijvingstekst aan om deze beter te laten opvallen."
 "Allow customer groups","Klantengroepen toestaan"
 "Method visibility","Zichtbaarheid van methode"
 "Method specific configuration","Methode-specifieke configuratie"
@@ -584,7 +584,7 @@
 "Spam Prevention","Spampreventie"
 "Number of attempts","Aantal pogingen"
 "Consumer notification","Kennisgeving aan consument"
-"This controls the description which the user sees during checkout. Please note that the subtext is not supported when the cards are showed separately instead of grouped.","Dit regelt de beschrijving die de gebruiker ziet tijdens het afrekenen. Let op: de ondertekst wordt niet ondersteund wanneer de kaarten afzonderlijk in plaats van gegroepeerd worden weergegeven."
+"This controls the description which the user sees during checkout. Please note that the subtext is not supported when the cards are showed separately instead of grouped.","U kunt ook een extra betaalmethodebeschrijving instellen die onder de naam van de betaalmethode wordt getoond, bijvoorbeeld 'Betaal achteraf'."
 "Set true to verify the address at American Express. Set false to disable address verification.","Stel Ja in om het adres te verifiëren bij American Express. Stel Nee in om adresverificatie uit te schakelen."
 "Set unsecure orders onhold","Zet onveilige bestellingen in de wacht"
 "Hold orders which are unsecure.","Houd bestellingen vast die onveilig zijn."
