--- a/i18n/nl_NL.csv
+++ b/i18n/nl_NL.csv
@@ -2,6 +2,17 @@
 "Buckaroo Payment Methods","Buckaroo betaalmethoden"
 "iDEAL","iDEAL"
 "Enable iDEAL","iDEAL inschakelen"
+"iDEAL Fast Checkout","	iDEAL snel bestellen"
+"Enable","Ingeschakeld"
+"Disable","Uitgeschakeld"
+"Enable or disable the iDEAL Fast Checkout button.","Schakel de iDEAL snel bestellen knop in of uit."
+"iDEAL Fast Checkout logo visibility","iDEAL snel bestellen logo zichtbaarheid"
+"iDEAL Fast Checkout logo scheme","iDEAL snel bestellen logo kleurschema"
+"Select the iDEAL fast checkout button (text) color.","Selecteer de (text) kleur van iDEAL snel bestellen knop."
+"Select where you want the button to be visible. Multiple options can be selected at the same time.","Selecteer waar de knop zichtbaar moet zijn. Meerdere opties kunnen tegelijkertijd worden geselecteerd."
+"Cart", "Winkelmand"
+"Light","Licht"
+"Dark","Donker"
 "Enable or disable this payment method.","Schakel de betaalmethode in of uit."
 "Frontend label","Label aan de voorkant"
 "Determines the frontend label shown.","De waarde zoals deze aan de voorkant wordt getoond."
