add translation for Ideal Fast Checkout

--- a/i18n/de_DE.csv
+++ b/i18n/de_DE.csv
@@ -462,3 +462,19 @@
 "Giftcard acquirer","Erwerber von Geschenkkarten"
 "Select your giftcard supplier","Wählen Sie Ihren Geschenkkartenanbieter aus"
 "You have canceled the payment request.","Sie haben die Zahlungsanforderung storniert."
+"iDEAL Fast Checkout","iDEAL Schnellkauf"
+"Enable","Aktiviert"
+"Disable","Deaktiviert"
+"Enable or disable the iDEAL Fast Checkout button.","Aktivieren oder deaktivieren Sie die iDEAL Schnellkauf-Schaltfläche."
+"iDEAL Fast Checkout logo visibility","Sichtbarkeit des iDEAL Schnellkauf-Logos"
+"iDEAL Fast Checkout logo scheme","Farbgebung des iDEAL Schnellkauf-Logos"
+"Select the iDEAL fast checkout button (text) color.","Wählen Sie die (Text-)Farbe der iDEAL Schnellkauf-Schaltfläche."
+"Select where you want the button to be visible. Multiple options can be selected at the same time.","Wählen Sie, wo die Schaltfläche sichtbar sein soll. Mehrere Optionen können gleichzeitig ausgewählt werden."
+"Cart","Warenkorb"
+"Light","Hell"
+"Dark","Dunkel"
+"Unable to create quote.","Angebot konnte nicht erstellt werden."
+"An error occurred while processing your order","Beim Bearbeiten Ihrer Bestellung ist ein Fehler aufgetreten"
+"Cannot create payment","Zahlung kann nicht erstellt werden"
+"Failed to create quote","Angebotserstellung fehlgeschlagen"
+"Failed to add address to quote","Adresse konnte dem Angebot nicht hinzugefügt werden"
