--- a/i18n/es_ES.csv
+++ b/i18n/es_ES.csv
@@ -461,3 +461,19 @@
 "This message is shown when the payment method is hidden. Maximum 280 characters.","Este mensaje se muestra cuando el método de pago está oculto. Máximo 280 caracteres."
 "Show Issuer Selection in the Checkout","Mostrar la selección de banco en el proceso de compra."
 "When the \"NO\" option is selected, the issuer selection for iDEAL will not be displayed in the checkout. Instead, customers will be redirected to a separate page where they can choose their iDEAL issuer (i.e., their bank). On the other hand, selecting the "Enable" option will display the issuer selection directly in the checkout. It's important to note that enabling this option will incur additional costs from Buckaroo. For precise cost details, please reach out to <a href=\"mailto:wecare@buckaroo.nl\">Buckaroo</a> directly.","Cuando se selecciona la opción \"NO\", la selección del emisor para iDEAL no se mostrará en el proceso de compra. En cambio, los clientes serán redirigidos a una página separada donde podrán elegir su emisor de iDEAL (es decir, su banco). Por otro lado, seleccionar la opción "Habilitar" mostrará la selección del emisor directamente en el proceso de compra. Es importante señalar que habilitar esta opción implicará costos adicionales por parte de Buckaroo. Para obtener detalles precisos sobre los costos, por favor comuníquese directamente con <a href=\"mailto:wecare@buckaroo.nl\">Buckaroo</a>."
+"iDEAL Fast Checkout","Pago rápido iDEAL"
+"Enable","Habilitado"
+"Disable","Deshabilitado"
+"Enable or disable the iDEAL Fast Checkout button.","Habilitar o deshabilitar el botón de pago rápido iDEAL."
+"iDEAL Fast Checkout logo visibility","Visibilidad del logo de pago rápido iDEAL"
+"iDEAL Fast Checkout logo scheme","Esquema de color del logo de pago rápido iDEAL"
+"Select the iDEAL fast checkout button (text) color.","Seleccione el color del botón de pago rápido iDEAL (texto)."
+"Select where you want the button to be visible. Multiple options can be selected at the same time.","Seleccione dónde desea que el botón sea visible. Se pueden seleccionar varias opciones al mismo tiempo."
+"Cart","Carrito"
+"Light","Claro"
+"Dark","Oscuro"
+"Unable to create quote.","No se pudo crear la cotización."
+"An error occurred while processing your order","Se produjo un error al procesar su pedido"
+"Cannot create payment","No se puede crear el pago"
+"Failed to create quote","No se pudo crear la cotización"
+"Failed to add address to quote","No se pudo añadir la dirección a la cotización"
