--- a/i18n/nl_BE.csv
+++ b/i18n/nl_BE.csv
@@ -462,3 +462,19 @@
 "Sort PayByBank Banks","Volgorde van de PayByBank issuers"
 "Sort Credit-debitcard issuers","Volgorde van de Credit-debitcard issuers"
 "You have canceled the payment request.","Vous avez annulé la demande de paiement"
+"iDEAL Fast Checkout","iDEAL snel bestellen"
+"Enable","Ingeschakeld"
+"Disable","Uitgeschakeld"
+"Enable or disable the iDEAL Fast Checkout button.","Schakel de iDEAL snel bestellen knop in of uit."
+"iDEAL Fast Checkout logo visibility","iDEAL snel bestellen logo zichtbaarheid"
+"iDEAL Fast Checkout logo scheme","iDEAL snel bestellen logo kleurschema"
+"Select the iDEAL fast checkout button (text) color.","Selecteer de (text) kleur van iDEAL snel bestellen knop."
+"Select where you want the button to be visible. Multiple options can be selected at the same time.","Selecteer waar de knop zichtbaar moet zijn. Meerdere opties kunnen tegelijkertijd worden geselecteerd."
+"Cart","Winkelmand"
+"Light","Licht"
+"Dark","Donker"
+"Unable to create quote.","Offerte kon niet worden aangemaakt."
+"An error occurred while processing your order","Er is een fout opgetreden bij het verwerken van uw bestelling"
+"Cannot create payment","Betaling kan niet worden aangemaakt"
+"Failed to create quote","Offerte aanmaken mislukt"
+"Failed to add address to quote","Adres kon niet aan offerte worden toegevoegd"
