add translation for Ideal Fast Checkout

--- a/i18n/nl_BE.csv
+++ b/i18n/nl_BE.csv
@@ -473,8 +473,8 @@
 "Cart","Winkelmand"
 "Light","Licht"
 "Dark","Donker"
-"Unable to create quote.","Offerte kon niet worden aangemaakt."
+"Unable to create quote.","Offerte kan niet worden aangemaakt."
 "An error occurred while processing your order","Er is een fout opgetreden bij het verwerken van uw bestelling"
 "Cannot create payment","Betaling kan niet worden aangemaakt"
 "Failed to create quote","Offerte aanmaken mislukt"
-"Failed to add address to quote","Adres kon niet aan offerte worden toegevoegd"
+"Failed to add address to quote","Adres kan niet aan offerte worden toegevoegd"
