BP-3669-Adjust the default Riverty name for Magento 2

--- a/i18n/es_ES.csv
+++ b/i18n/es_ES.csv
@@ -243,8 +243,8 @@
 "Adjustment Refund","Reembolso de ajuste"
 "Adjustment Fee","Tarifa de ajuste"
 "Unfortunately an error occurred while processing your payment. Please try again. If this error persists","Se ha producido un error al procesar el pago. Inténtelo de nuevo. Si el error continúa produciéndose, elija un método de pago diferente."
-"Riverty | Afterpay","Riverty | Afterpay"
-"Enable Riverty | Afterpay","Activar Riverty | Afterpay"
+"Riverty","Riverty"
+"Enable Riverty","Activar Riverty"
 "Giftcard","Giftcard"
 "Enable Giftcard","Activar Giftcard"
 "PayPerEmail","PayPerEmail"
@@ -304,7 +304,7 @@
 "Please make sure all fields are filled in correctly before proceeding.","Antes de continuar, compruebe que ha rellenado todos los campos correctamente."
 "Not Applicable","No aplicable"
 "Yes","Sí"
-"Yes, I accept the terms and condition for the use of Riverty | Afterpay.","Sí, acepto los términos y condiciones de uso de Riverty | Afterpay."
+"Yes, I accept the terms and condition for the use of Riverty.","Sí, acepto los términos y condiciones de uso de Riverty."
 "Accept terms of use","Aceptar los términos de uso"
 "(DD/MM/YYYY)","(DD/MM/AAAA)"
 "Any comments about this Beta release? <a target=\"_blank\" href=\"%s\"> Please let us know! </a>","Quiere comentarnos algo acerca de esta versión beta? <a target=\"_blank\" href=\"%s\"> ¡Cuéntenoslo! </a>"
