--- a/i18n/fr_FR.csv
+++ b/i18n/fr_FR.csv
@@ -241,8 +241,8 @@
 "Adjustment Refund","Remboursement d'ajustement"
 "Adjustment Fee","Frais d'ajustement"
 "Unfortunately an error occurred while processing your payment. Please try again. If this error persists, please choose a different payment method.","Malheureusement, une erreur s'est produite lors du traitement de votre paiement. Veuillez réessayer. Si cette erreur persiste, veuillez choisir un autre mode de paiement."
-"Riverty | Afterpay","Riverty | Afterpay"
-"Enable Riverty | Afterpay","Activer Riverty | Afterpay"
+"Riverty","Riverty"
+"Enable Riverty","Activer Riverty"
 "Giftcard","Carte cadeau"
 "Enable Giftcard","Activer la carte-cadeau"
 "PayPerEmail","PayPerEmail"
