--- a/i18n/nl_NL.csv
+++ b/i18n/nl_NL.csv
@@ -243,8 +243,8 @@
 "Adjustment Refund","Aanpassingsbetaling"
 "Adjustment Fee","Aanpassingstoeslag"
 "Unfortunately an error occurred while processing your payment. Please try again. If this error persists, please choose a different payment method.","Er is een fout opgetreden tijdens het verwerken van uw betaling. Probeer het opnieuw. Als deze fout aanhoudt, kies dan een andere betaalmethode."
-"Riverty | Afterpay","Riverty | Afterpay"
-"Enable Riverty | Afterpay","Riverty | Afterpay inschakelen"
+"Riverty","Riverty"
+"Enable Riverty","Riverty inschakelen"
 "Giftcard","Cadeaukaarten"
 "Enable Giftcard","Cadeaukaarten inschakelen"
 "PayPerEmail","PayPerEmail"
@@ -303,7 +303,7 @@
 "Terms and Conditions:","Algemene voorwaarden:"
 "Please make sure all fields are filled in correctly before proceeding.","Zorg ervoor dat alle velden correct ingevuld zijn voordat u doorgaat."
 "Not Applicable","Niet van toepassing"
-"Yes, I accept the terms and condition for the use of Riverty | Afterpay.","Ja, ik accepteer de algemene voorwaarden voor het gebruik van Riverty | Afterpay"
+"Yes, I accept the terms and condition for the use of Riverty.","Ja, ik accepteer de algemene voorwaarden voor het gebruik van Riverty."
 "Accept terms of use","Accepteer algemene voorwaarden"
 "(DD/MM/YYYY)","(DD/MM/JJJJ)"
 "Any comments about this Beta release? <a target=\"_blank\" href=\"%s\"> Please let us know! </a>","Heeft u opmerkingen over deze Beta release? <a target=\"_blank\" href=\"%s\"> Laat het ons weten! </a>"
