--- a/i18n/de_DE.csv
+++ b/i18n/de_DE.csv
@@ -241,8 +241,8 @@
 "Adjustment Refund","Anpassungsrückerstattung"
 "Adjustment Fee","Anpassungsgebühr"
 "Unfortunately an error occurred while processing your payment. Please try again. If this error persists, please choose a different payment method.","Leider ist bei der Verarbeitung Ihrer Zahlung ein Fehler aufgetreten. Bitte versuche es erneut. Wenn dieser Fehler weiterhin besteht, wählen Sie bitte eine andere Zahlungsmethode."
-"Riverty | Afterpay","Riverty | Afterpay"
-"Enable Riverty | Afterpay","Riverty | Afterpay activieren"
+"Riverty","Riverty"
+"Enable Riverty","Riverty activieren"
 "Giftcard","Geschenkkarte"
 "Enable Giftcard","Geschenkkarte aktivieren"
 "PayPerEmail","PayPerEmail"
@@ -297,7 +297,7 @@
 "Terms and Conditions:","Geschäftsbedingungen:"
 "Please make sure all fields are filled in correctly before proceeding.","Bitte stellen Sie sicher, dass alle Felder korrekt ausgefüllt sind, bevor Sie fortfahren."
 "Not Applicable","Unzutreffend"
-"Yes, I accept the terms and condition for the use of Riverty | Afterpay.","Ja, ich akzeptiere die Nutzungsbedingungen für Riverty | Afterpay."
+"Yes, I accept the terms and condition for the use of Riverty.","Ja, ich akzeptiere die Nutzungsbedingungen für Riverty."
 "Accept terms of use","Akzeptieren Sie die Allgemeinen Geschäftsbedingungen"
 "(DD/MM/YYYY)","(DD/MM/JJJJ)"
 "Any comments about this Beta release? <a target=\"_blank\" href=\"%s\"> Please let us know! </a>","Irgendwelche Kommentare zu dieser Beta-Version? <a target=\"_blank\" href=\"%s\"> Lass uns wissen! </a>"
